WIP To allow compilation with java 17